org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/CallOperation/002_CallOperation_NoNewOnSingletonClass.kmt

using kermeta::emfpersistence
using kermeta::standard
using kermeta::io
using kermeta::io::StdIO => stdio

package test{
        
    class A {
    	operation test() :  Void is do
    		
    		var a : FileIO init FileIO.new
    		
    	end
    }
    
}